Add base styles (again)

--- a/styles/default.less
+++ b/styles/default.less
@@ -6,12 +6,12 @@
 ////////////////////////////////////////////////////////////////
 
 ::selection {
-    background-color: @bleach;
+    background-color: @white;
     color: @black;
 }
 
 ::-moz-selection {
-    background-color: @bleach;
+    background-color: @white;
     color: @black;
 }
 
