--- a/styles/default.css
+++ b/styles/default.css
@@ -108,94 +108,14 @@ input[type="search"] {
   -o-transition: .3s ease;
   transition: .3s ease;
 }
-.fadeIn {
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
-  -webkit-animation-duration: .32s;
-  animation-duration: .32s;
-  -webkit-animation-timing-function: ease;
-  animation-timing-function: ease;
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0.0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0.0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 ::selection {
-  background-color: #fffab2;
+  background-color: #ffffff;
   color: #000000;
 }
 ::-moz-selection {
-  background-color: #fffab2;
+  background-color: #ffffff;
   color: #000000;
 }
-mark {
-  background-color: #fffab2;
-}
-.container.collapsing {
-  -webkit-transition: none;
-  transition: none;
-}
-.tooltip .tooltip-inner {
-  text-transform: none;
-}
-@media (min-width: 480px) {
-  body {
-    padding: 0;
-  }
-  #read-more > div > div {
-    padding-bottom: 0;
-  }
-  #read-more > div > div:last-of-type {
-    padding-bottom: 32px;
-  }
-}
-@media (min-width: 768px) {
-  body {
-    padding: 64px 0;
-  }
-  #read-more > div > div {
-    padding-bottom: 0;
-  }
-  #read-more > div > div:last-of-type {
-    padding-bottom: 32px;
-  }
-}
-@media (min-width: 992px) {
-  body {
-    padding: 64px 0;
-  }
-  #read-more > div > div {
-    padding-bottom: 32px;
-  }
-}
-@media (min-width: 1200px) {
-  body {
-    padding: 64px 0;
-  }
-  #read-more > div > div {
-    padding-bottom: 32px;
-  }
-}
-/* The Grid System
- *
- * .col-md-12
- * .col-md-12
- * .col-md-6 + .col-md-6
- * .col-md-12
- *
- */
 html {
   height: 100%;
   background-color: #ffffff;
@@ -213,84 +133,4 @@ html body {
   background-color: #ffffff;
   color: #000000;
   overflow: auto;
-}
-html body a,
-html body a:active,
-html body a:link,
-html body a:visited {
-  color: #292929;
-  text-decoration: underline;
-}
-html body a:hover {
-  color: #7a7a7a;
-}
-html body header {
-  margin: 32px 0;
-}
-html body header .header-main {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-html body header .header-main hgroup {
-  text-transform: uppercase;
-}
-html body header .header-main hgroup h1 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  font-size: 3.2rem;
-}
-html body header .header-main hgroup h2 {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 22px;
-  font-size: 2.2rem;
-}
-html body header .header-main hgroup h2 a[href="#llegir-mes"],
-html body header .header-main hgroup h2 a[href="#read-more"],
-html body header .header-main hgroup h2 a[href="#leer-mas"] {
-  font-family: 'Libre Baskerville', serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  font-size: 1.6rem;
-  text-transform: capitalize;
-}
-html body #llegir-mes h2,
-html body #read-more h2,
-html body #leer-mas h2 {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  font-size: 1.8rem;
-  margin: 32px 0;
-  text-transform: uppercase;
-}
-html body #main {
-  overflow: auto;
-  margin-bottom: 32px;
-}
-html body #main #content h2 {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  font-size: 1.8rem;
-  margin: 32px 0;
-  text-transform: uppercase;
-}
-html body footer {
-  margin: 32px 0;
-  overflow: auto;
-}
-html body footer address strong {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  font-size: 1.6rem;
-  text-transform: uppercase;
-}
-html body footer .site-info {
-  display: none;
 }
