--- a/styles/default.css
+++ b/styles/default.css
@@ -109,12 +109,12 @@ input[type="search"] {
   transition: .3s ease;
 }
 ::selection {
-  background-color: #ffffff;
-  color: #000000;
+  background-color: #000000;
+  color: #ffffff;
 }
 ::-moz-selection {
-  background-color: #ffffff;
-  color: #000000;
+  background-color: #000000;
+  color: #ffffff;
 }
 html {
   height: 100%;
@@ -124,13 +124,157 @@ html {
 
 }
 html body {
-  height: 100%;
   font-family: 'Libre Baskerville', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   font-size: 1.6rem;
+  height: 100%;
   background-color: #ffffff;
   color: #000000;
+  position: relative;
   overflow: auto;
+}
+html body object {
+  position: absolute;
+}
+html body object[data="0101-0110.svg"] {
+  top: 60px;
+  left: 60px;
+}
+html body object[data="0921-0931.svg"] {
+  top: 60px;
+  left: 60px;
+}
+html body object[data="0111-0120.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0121-0131.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0201-0210.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0211-0220.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0221-0231.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0301-0310.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0311-0320.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0321-0331.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0701-0710.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0711-0720.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0721-0731.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0801-0810.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0811-0820.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0821-0831.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0901-0910.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0911-0920.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="0421-0431.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="0501-0510.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="0511-0520.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="0521-0531.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="0601-0610.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="0611-0620.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="0621-0631.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="1001-1010.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="1011-1020.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="1021-1031.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="1101-1110.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="1111-1120.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="1121-1131.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="1201-1210.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="1211-1220.svg"] {
+  bottom: 60px;
+  left: 60px;
+}
+html body object[data="0401-0410.svg"] {
+  bottom: 60px;
+  right: 60px;
+}
+html body object[data="1221-1231.svg"] {
+  bottom: 60px;
+  right: 60px;
 }
