Update missing style

--- a/styles/default.less
+++ b/styles/default.less
@@ -66,6 +66,7 @@ html {
         object[data="0901-0910.svg"] { top: 60px; right: 60px; }
         object[data="0911-0920.svg"] { top: 60px; right: 60px; }
         
+        object[data="0411-0420.svg"] { bottom: 60px; left: 60px; }
         object[data="0421-0431.svg"] { bottom: 60px; left: 60px; }
         object[data="0501-0510.svg"] { bottom: 60px; left: 60px; }
         object[data="0511-0520.svg"] { bottom: 60px; left: 60px; }
