--- a/styles/default.less
+++ b/styles/default.less
@@ -41,10 +41,8 @@ html {
         color: @black;
         position: relative;
         overflow: auto;
-        
-        object {
-            position: absolute;
-        }
+                
+        object { position: absolute; }
         
         object[data="0101-0110.svg"] { top: 60px; left: 60px; }
         object[data="0921-0931.svg"] { top: 60px; left: 60px; }
@@ -85,6 +83,8 @@ html {
         
         object[data="0401-0410.svg"] { bottom: 60px; right: 60px; }
         object[data="1221-1231.svg"] { bottom: 60px; right: 60px; }
+        
+        .error { margin: 60px; }
 	}
 	
 	////////////////////////////////////////////////////////////////
