--- a/styles/default.less
+++ b/styles/default.less
@@ -1,4 +1,13 @@
-@import url('base.less');
+@import url('fonts.less');
+
+@black: #000000;
+@color: #333333;
+@hue: #666666;
+@white: #ffffff;
+
+//.color { stroke: @color; fill: @color; }
+//.hue { stroke: @hue; fill: @hue; }
+.white { stroke: @white; fill: @white; }
 
 ////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////
@@ -25,9 +34,9 @@
 // BEGIN OF: HTML
 
 html {
-    .full-height;
 	background-color: @white;
 	font-size: 62.5%; /* Sets up the Base 10 stuff */
+    height: 100%;
 	
 	////////////////////////////////////////////////////////////////
 	////////////////////////////////////////////////////////////////
@@ -36,53 +45,55 @@ html {
 	body {
         .font-family-base; .normal;
         .font-size(1.6);
-        .full-height;
 		background-color: @white;
         color: @black;
+        height: 100%;
         position: relative;
         overflow: auto;
                 
-        object { position: absolute; }
+        object {
+            position: absolute;
+        }
         
-        object[data="0101-0110.svg"] { top: 60px; left: 60px; }
-        object[data="0921-0931.svg"] { top: 60px; left: 60px; }
+        object[data="objects/0101-0110.svg"] { top: 60px; left: 60px; }
+        object[data="objects/0921-0931.svg"] { top: 60px; left: 60px; }
         
-        object[data="0111-0120.svg"] { top: 60px; right: 60px; }
-        object[data="0121-0131.svg"] { top: 60px; right: 60px; }
-        object[data="0201-0210.svg"] { top: 60px; right: 60px; }
-        object[data="0211-0220.svg"] { top: 60px; right: 60px; }
-        object[data="0221-0231.svg"] { top: 60px; right: 60px; }
-        object[data="0301-0310.svg"] { top: 60px; right: 60px; }
-        object[data="0311-0320.svg"] { top: 60px; right: 60px; }
-        object[data="0321-0331.svg"] { top: 60px; right: 60px; }
-        object[data="0701-0710.svg"] { top: 60px; right: 60px; }
-        object[data="0711-0720.svg"] { top: 60px; right: 60px; }
-        object[data="0721-0731.svg"] { top: 60px; right: 60px; }
-        object[data="0801-0810.svg"] { top: 60px; right: 60px; }
-        object[data="0811-0820.svg"] { top: 60px; right: 60px; }
-        object[data="0821-0831.svg"] { top: 60px; right: 60px; }
-        object[data="0901-0910.svg"] { top: 60px; right: 60px; }
-        object[data="0911-0920.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0111-0120.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0121-0131.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0201-0210.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0211-0220.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0221-0231.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0301-0310.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0311-0320.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0321-0331.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0701-0710.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0711-0720.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0721-0731.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0801-0810.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0811-0820.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0821-0831.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0901-0910.svg"] { top: 60px; right: 60px; }
+        object[data="objects/0911-0920.svg"] { top: 60px; right: 60px; }
         
-        object[data="0411-0420.svg"] { bottom: 60px; left: 60px; }
-        object[data="0421-0431.svg"] { bottom: 60px; left: 60px; }
-        object[data="0501-0510.svg"] { bottom: 60px; left: 60px; }
-        object[data="0511-0520.svg"] { bottom: 60px; left: 60px; }
-        object[data="0521-0531.svg"] { bottom: 60px; left: 60px; }
-        object[data="0601-0610.svg"] { bottom: 60px; left: 60px; }
-        object[data="0611-0620.svg"] { bottom: 60px; left: 60px; }
-        object[data="0621-0631.svg"] { bottom: 60px; left: 60px; }
-        object[data="1001-1010.svg"] { bottom: 60px; left: 60px; }
-        object[data="1011-1020.svg"] { bottom: 60px; left: 60px; }
-        object[data="1021-1031.svg"] { bottom: 60px; left: 60px; }
-        object[data="1101-1110.svg"] { bottom: 60px; left: 60px; }
-        object[data="1111-1120.svg"] { bottom: 60px; left: 60px; }
-        object[data="1121-1131.svg"] { bottom: 60px; left: 60px; }
-        object[data="1201-1210.svg"] { bottom: 60px; left: 60px; }
-        object[data="1211-1220.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/0411-0420.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/0421-0431.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/0501-0510.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/0511-0520.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/0521-0531.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/0601-0610.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/0611-0620.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/0621-0631.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/1001-1010.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/1011-1020.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/1021-1031.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/1101-1110.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/1111-1120.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/1121-1131.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/1201-1210.svg"] { bottom: 60px; left: 60px; }
+        object[data="objects/1211-1220.svg"] { bottom: 60px; left: 60px; }
         
-        object[data="0401-0410.svg"] { bottom: 60px; right: 60px; }
-        object[data="1221-1231.svg"] { bottom: 60px; right: 60px; }
+        object[data="objects/0401-0410.svg"] { bottom: 60px; right: 60px; }
+        object[data="objects/1221-1231.svg"] { bottom: 60px; right: 60px; }
         
         .error { margin: 60px; }
 	}
