--- a/styles/default.css
+++ b/styles/default.css
@@ -38,75 +38,14 @@
   font-style: oblique;
   font-weight: normal;
 }
-.full-height {
-  height: 100%;
-}
-.full-width {
-  width: 100%;
-}
-.hidden {
-  display: none;
-}
-.list-style-none {
-  list-style-type: none;
-}
-.no-repeat {
-  background-repeat: no-repeat;
-}
-.table {
-  display: table;
-}
-.vertical-centering {
-  vertical-align: middle;
-  display: table-cell;
-}
-.zero {
-  margin: 0;
-  padding: 0;
-}
-input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-  outline: none;
-}
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -moz-appearance: textfield;
-  appearance: textfield;
-}
 * {
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke: 1px transparent;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.01);
 }
-.flip {
-  -webkit-transform: scaleX(-1);
-  -moz-transform: scaleX(-1);
-  -o-transform: scaleX(-1);
-  transform: scaleX(-1);
-  -ms-filter: "FlipH";
-  filter: FlipH;
-}
-.opaque {
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-.translucent {
-  opacity: 0.50;
-  filter: alpha(opacity=50);
-}
-.transparent {
-  opacity: 0;
-  filter: alpha(opacity=0);
-}
-.transition {
-  -webkit-backface-visibility: hidden;
-  -webkit-transition: .3s ease;
-  -moz-transition: .3s ease;
-  -ms-transition: .3s ease;
-  -o-transition: .3s ease;
-  transition: .3s ease;
+.white {
+  stroke: #ffffff;
+  fill: #ffffff;
 }
 ::selection {
   background-color: #000000;
@@ -117,11 +56,11 @@ input[type="search"] {
   color: #ffffff;
 }
 html {
-  height: 100%;
   background-color: #ffffff;
   font-size: 62.5%;
   /* Sets up the Base 10 stuff */
 
+  height: 100%;
 }
 html body {
   font-family: 'Libre Baskerville', serif;
@@ -129,156 +68,156 @@ html body {
   font-weight: 400;
   font-size: 16px;
   font-size: 1.6rem;
-  height: 100%;
   background-color: #ffffff;
   color: #000000;
+  height: 100%;
   position: relative;
   overflow: auto;
 }
 html body object {
   position: absolute;
 }
-html body object[data="0101-0110.svg"] {
+html body object[data="objects/0101-0110.svg"] {
   top: 60px;
   left: 60px;
 }
-html body object[data="0921-0931.svg"] {
+html body object[data="objects/0921-0931.svg"] {
   top: 60px;
   left: 60px;
 }
-html body object[data="0111-0120.svg"] {
-  top: 60px;
-  right: 60px;
-}
-html body object[data="0121-0131.svg"] {
+html body object[data="objects/0111-0120.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0201-0210.svg"] {
+html body object[data="objects/0121-0131.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0211-0220.svg"] {
+html body object[data="objects/0201-0210.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0221-0231.svg"] {
+html body object[data="objects/0211-0220.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0301-0310.svg"] {
+html body object[data="objects/0221-0231.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0311-0320.svg"] {
+html body object[data="objects/0301-0310.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0321-0331.svg"] {
+html body object[data="objects/0311-0320.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0701-0710.svg"] {
+html body object[data="objects/0321-0331.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0711-0720.svg"] {
+html body object[data="objects/0701-0710.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0721-0731.svg"] {
+html body object[data="objects/0711-0720.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0801-0810.svg"] {
+html body object[data="objects/0721-0731.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0811-0820.svg"] {
+html body object[data="objects/0801-0810.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0821-0831.svg"] {
+html body object[data="objects/0811-0820.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0901-0910.svg"] {
+html body object[data="objects/0821-0831.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0911-0920.svg"] {
+html body object[data="objects/0901-0910.svg"] {
   top: 60px;
   right: 60px;
 }
-html body object[data="0411-0420.svg"] {
+html body object[data="objects/0911-0920.svg"] {
+  top: 60px;
+  right: 60px;
+}
+html body object[data="objects/0411-0420.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="0421-0431.svg"] {
+html body object[data="objects/0421-0431.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="0501-0510.svg"] {
+html body object[data="objects/0501-0510.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="0511-0520.svg"] {
+html body object[data="objects/0511-0520.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="0521-0531.svg"] {
+html body object[data="objects/0521-0531.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="0601-0610.svg"] {
+html body object[data="objects/0601-0610.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="0611-0620.svg"] {
+html body object[data="objects/0611-0620.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="0621-0631.svg"] {
+html body object[data="objects/0621-0631.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="1001-1010.svg"] {
+html body object[data="objects/1001-1010.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="1011-1020.svg"] {
+html body object[data="objects/1011-1020.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="1021-1031.svg"] {
+html body object[data="objects/1021-1031.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="1101-1110.svg"] {
+html body object[data="objects/1101-1110.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="1111-1120.svg"] {
+html body object[data="objects/1111-1120.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="1121-1131.svg"] {
+html body object[data="objects/1121-1131.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="1201-1210.svg"] {
+html body object[data="objects/1201-1210.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="1211-1220.svg"] {
+html body object[data="objects/1211-1220.svg"] {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="0401-0410.svg"] {
+html body object[data="objects/0401-0410.svg"] {
   bottom: 60px;
   right: 60px;
 }
-html body object[data="1221-1231.svg"] {
+html body object[data="objects/1221-1231.svg"] {
   bottom: 60px;
   right: 60px;
 }
