--- a/styles/fonts.less
+++ b/styles/fonts.less
@@ -1,1 +1,72 @@
 @import url(http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic);
+
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+
+.libre-baskerville-bold {
+    font-family: 'Libre Baskerville', serif;
+	font-style: normal;
+	font-weight: 700;
+}
+
+.libre-baskerville-italic {
+	font-family: 'Libre Baskerville', serif;
+	font-style: italic;
+	font-weight: 400;
+}
+.libre-baskerville-normal {
+	font-family: 'Libre Baskerville', serif;
+	font-style: normal;
+	font-weight: 400;
+}
+
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+
+@font-family-monospace: Menlo, Monaco, Consolas, "Courier New", monospace;
+@font-family-sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+@font-family-serif: 'Libre Baskerville', serif;
+
+@font-family-base: @font-family-serif;
+
+.font-family-base { font-family: @font-family-base; }
+.font-family-monospace { font-family: @font-family-monospace; }
+.font-family-sans-serif { font-family: @font-family-sans-serif; }
+.font-family-serif { font-family: @font-family-serif; }
+
+.bold { font-style: normal; font-weight: 700; }
+.normal { font-style: normal; font-weight: 400; }
+.oblique { font-style: oblique; font-weight: normal; }
+
+
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+
+* {
+	-webkit-font-smoothing: antialiased;
+	-webkit-text-stroke: 1px transparent;
+	text-shadow: 0 1px 0 rgba(0,0,0,0.01);
+}
+
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+
+.font-size(@sizeValue) {
+	@remValue: @sizeValue;
+	@pxValue: (@sizeValue * 10);
+	font-size: ~"@{pxValue}px";
+	font-size: ~"@{remValue}rem";
+}
+
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
