--- a/styles/default.css
+++ b/styles/default.css
@@ -43,17 +43,19 @@
   -webkit-text-stroke: 1px transparent;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.01);
 }
+.color {
+  fill: #333333;
+  stroke: #333333;
+}
+.hue {
+  fill: #666666;
+  stroke: #666666;
+  opacity: .64;
+  stroke-opacity: 0;
+}
 .white {
-  stroke: #ffffff;
   fill: #ffffff;
-}
-::selection {
-  background-color: #000000;
-  color: #ffffff;
-}
-::-moz-selection {
-  background-color: #000000;
-  color: #ffffff;
+  stroke: #ffffff;
 }
 html {
   background-color: #ffffff;
@@ -74,153 +76,165 @@ html body {
   position: relative;
   overflow: auto;
 }
-html body object {
+html body #svgObject svg {
+  height: 360px;
   position: absolute;
+  width: 360px;
 }
-html body object[data="objects/0101-0110.svg"] {
+html body #object-0101-0110 {
   top: 60px;
   left: 60px;
 }
-html body object[data="objects/0921-0931.svg"] {
+html body #object-0921-0931 {
   top: 60px;
   left: 60px;
 }
-html body object[data="objects/0111-0120.svg"] {
-  top: 60px;
-  right: 60px;
-}
-html body object[data="objects/0121-0131.svg"] {
+html body #object-0111-0120 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0201-0210.svg"] {
+html body #object-0121-0131 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0211-0220.svg"] {
+html body #object-0201-0210 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0221-0231.svg"] {
+html body #object-0211-0220 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0301-0310.svg"] {
+html body #object-0221-0231 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0311-0320.svg"] {
+html body #object-0301-0310 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0321-0331.svg"] {
+html body #object-0311-0320 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0701-0710.svg"] {
+html body #object-0321-0331 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0711-0720.svg"] {
+html body #object-0701-0710 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0721-0731.svg"] {
+html body #object-0711-0720 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0801-0810.svg"] {
+html body #object-0721-0731 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0811-0820.svg"] {
+html body #object-0801-0810 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0821-0831.svg"] {
+html body #object-0811-0820 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0901-0910.svg"] {
+html body #object-0821-0831 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0911-0920.svg"] {
+html body #object-0901-0910 {
   top: 60px;
   right: 60px;
 }
-html body object[data="objects/0411-0420.svg"] {
+html body #object-0911-0920 {
+  top: 60px;
+  right: 60px;
+}
+html body #object-0411-0420 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/0421-0431.svg"] {
+html body #object-0421-0431 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/0501-0510.svg"] {
+html body #object-0501-0510 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/0511-0520.svg"] {
+html body #object-0511-0520 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/0521-0531.svg"] {
+html body #object-0521-0531 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/0601-0610.svg"] {
+html body #object-0601-0610 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/0611-0620.svg"] {
+html body #object-0611-0620 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/0621-0631.svg"] {
+html body #object-0621-0631 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/1001-1010.svg"] {
+html body #object-1001-1010 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/1011-1020.svg"] {
+html body #object-1011-1020 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/1021-1031.svg"] {
+html body #object-1021-1031 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/1101-1110.svg"] {
+html body #object-1101-1110 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/1111-1120.svg"] {
+html body #object-1111-1120 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/1121-1131.svg"] {
+html body #object-1121-1131 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/1201-1210.svg"] {
+html body #object-1201-1210 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/1211-1220.svg"] {
+html body #object-1211-1220 {
   bottom: 60px;
   left: 60px;
 }
-html body object[data="objects/0401-0410.svg"] {
+html body #object-0401-0410 {
   bottom: 60px;
   right: 60px;
 }
-html body object[data="objects/1221-1231.svg"] {
+html body #object-1221-1231 {
   bottom: 60px;
   right: 60px;
 }
 html body .error {
   margin: 60px;
+}
+/* http://keith-wood.name/svg.html
+   SVG for jQuery v1.5.0.
+   Written by Keith Wood (kbwood{at}iinet.com.au) August 2007. */
+svg\:svg {
+  display: none;
+}
+.svg_error {
+  color: red;
+  font-weight: bold;
 }
