--- a/styles/default.less
+++ b/styles/default.less
@@ -42,45 +42,45 @@ html {
             width: 360px;
         }
         
-        #object-0101-0110 { top: 60px; left: 60px; }
-        #object-0921-0931 { top: 60px; left: 60px; }
+        #object-0101-0110 { top: 0; left: 0; }
+        #object-0921-0930 { top: 0; left: 0; }
         
-        #object-0111-0120 { top: 60px; right: 60px; }
-        #object-0121-0131 { top: 60px; right: 60px; }
-        #object-0201-0210 { top: 60px; right: 60px; }
-        #object-0211-0220 { top: 60px; right: 60px; }
-        #object-0221-0231 { top: 60px; right: 60px; }
-        #object-0301-0310 { top: 60px; right: 60px; }
-        #object-0311-0320 { top: 60px; right: 60px; }
-        #object-0321-0331 { top: 60px; right: 60px; }
-        #object-0701-0710 { top: 60px; right: 60px; }
-        #object-0711-0720 { top: 60px; right: 60px; }
-        #object-0721-0731 { top: 60px; right: 60px; }
-        #object-0801-0810 { top: 60px; right: 60px; }
-        #object-0811-0820 { top: 60px; right: 60px; }
-        #object-0821-0831 { top: 60px; right: 60px; }
-        #object-0901-0910 { top: 60px; right: 60px; }
-        #object-0911-0920 { top: 60px; right: 60px; }
+        #object-0111-0120 { top: 0; right: 0; }
+        #object-0121-0131 { top: 0; right: 0; }
+        #object-0201-0210 { top: 0; right: 0; }
+        #object-0211-0220 { top: 0; right: 0; }
+        #object-0221-0229 { top: 0; right: 0; }
+        #object-0301-0310 { top: 0; right: 0; }
+        #object-0311-0320 { top: 0; right: 0; }
+        #object-0321-0331 { top: 113px; right: 0; }
+        #object-0701-0710 { top: 0; right: 0; }
+        #object-0711-0720 { top: 0; right: 0; }
+        #object-0721-0731 { top: 0; right: 0; }
+        #object-0801-0810 { top: 0; right: 0; }
+        #object-0811-0820 { top: 0; right: 0; }
+        #object-0821-0831 { top: 0; right: 0; }
+        #object-0901-0910 { top: 0; right: 0; }
+        #object-0911-0920 { top: 0; right: 0; }
         
-        #object-0411-0420 { bottom: 60px; left: 60px; }
-        #object-0421-0431 { bottom: 60px; left: 60px; }
-        #object-0501-0510 { bottom: 60px; left: 60px; }
-        #object-0511-0520 { bottom: 60px; left: 60px; }
-        #object-0521-0531 { bottom: 60px; left: 60px; }
-        #object-0601-0610 { bottom: 60px; left: 60px; }
-        #object-0611-0620 { bottom: 60px; left: 60px; }
-        #object-0621-0631 { bottom: 60px; left: 60px; }
-        #object-1001-1010 { bottom: 60px; left: 60px; }
-        #object-1011-1020 { bottom: 60px; left: 60px; }
-        #object-1021-1031 { bottom: 60px; left: 60px; }
-        #object-1101-1110 { bottom: 60px; left: 60px; }
-        #object-1111-1120 { bottom: 60px; left: 60px; }
-        #object-1121-1131 { bottom: 60px; left: 60px; }
-        #object-1201-1210 { bottom: 60px; left: 60px; }
-        #object-1211-1220 { bottom: 60px; left: 60px; }
+        #object-0411-0420 { bottom: 0; left: 0; }
+        #object-0421-0430 { bottom: 0; left: 0; }
+        #object-0501-0510 { bottom: 0; left: 0; }
+        #object-0511-0520 { bottom: 0; left: 0; }
+        #object-0521-0531 { bottom: 0; left: 0; }
+        #object-0601-0610 { bottom: 0; left: 0; }
+        #object-0611-0620 { bottom: 0; left: 0; }
+        #object-0621-0630 { bottom: 0; left: 0; }
+        #object-1001-1010 { bottom: 0; left: 0; }
+        #object-1011-1020 { bottom: 0; left: 0; }
+        #object-1021-1031 { bottom: 0; left: 0; }
+        #object-1101-1110 { bottom: 0; left: 0; }
+        #object-1111-1120 { bottom: 0; left: 0; }
+        #object-1121-1130 { bottom: 0; left: 0; }
+        #object-1201-1210 { bottom: 0; left: 0; }
+        #object-1211-1220 { bottom: 0; left: 0; }
         
-        #object-0401-0410 { bottom: 60px; right: 60px; }
-        #object-1221-1231 { bottom: 60px; right: 60px; }
+        #object-0401-0410 { bottom: 0; right: 0; }
+        #object-1221-1231 { bottom: 0; right: 0; }
         
         .error { margin: 60px; }
 	}
