--- a/styles/default.css
+++ b/styles/default.css
@@ -118,7 +118,7 @@ html body #object-0311-0320 {
   right: 0;
 }
 html body #object-0321-0331 {
-  top: 113px;
+  top: 0;
   right: 0;
 }
 html body #object-0701-0710 {
@@ -226,7 +226,7 @@ html body #object-1221-1231 {
   right: 0;
 }
 html body .error {
-  margin: 60px;
+  margin: 113px;
 }
 /* http://keith-wood.name/svg.html
    SVG for jQuery v1.5.0.
