--- a/styles/default.less
+++ b/styles/default.less
@@ -52,7 +52,7 @@ html {
         #object-0221-0229 { top: 0; right: 0; }
         #object-0301-0310 { top: 0; right: 0; }
         #object-0311-0320 { top: 0; right: 0; }
-        #object-0321-0331 { top: 113px; right: 0; }
+        #object-0321-0331 { top: 0; right: 0; }
         #object-0701-0710 { top: 0; right: 0; }
         #object-0711-0720 { top: 0; right: 0; }
         #object-0721-0731 { top: 0; right: 0; }
@@ -82,7 +82,7 @@ html {
         #object-0401-0410 { bottom: 0; right: 0; }
         #object-1221-1231 { bottom: 0; right: 0; }
         
-        .error { margin: 60px; }
+        .error { margin: 113px; }
 	}
 	
 	////////////////////////////////////////////////////////////////
