--- a/styles/default.css
+++ b/styles/default.css
@@ -64,6 +64,150 @@ html {
 
   height: 100%;
 }
+html body.object-0101-0110 .info {
+  bottom: 0;
+  right: 0;
+}
+html body.object-0921-0930 .info {
+  bottom: 0;
+  right: 0;
+}
+html body.object-0111-0120 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0121-0131 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0201-0210 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0211-0220 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0221-0229 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0301-0310 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0311-0320 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0321-0331 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0701-0710 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0711-0720 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0721-0731 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0801-0810 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0811-0820 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0821-0831 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0901-0910 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0911-0920 .info {
+  bottom: 0;
+  left: 0;
+}
+html body.object-0411-0420 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-0421-0430 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-0501-0510 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-0511-0520 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-0521-0531 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-0601-0610 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-0611-0620 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-0621-0630 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-1001-1010 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-1011-1020 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-1021-1031 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-1101-1110 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-1111-1120 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-1121-1130 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-1201-1210 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-1211-1220 .info {
+  top: 0;
+  right: 0;
+}
+html body.object-0401-0410 .info {
+  top: 0;
+  left: 0;
+}
+html body.object-1221-1231 .info {
+  top: 0;
+  left: 0;
+}
 html body {
   font-family: 'Libre Baskerville', serif;
   font-style: normal;
@@ -75,6 +219,16 @@ html body {
   height: 100%;
   position: relative;
   overflow: auto;
+}
+html body .info {
+  border: 1px solid;
+  font-size: 68%;
+  height: 120px;
+  line-height: 2em;
+  margin: 90px;
+  padding: 30px;
+  position: absolute;
+  width: 120px;
 }
 html body #svgObject svg {
   height: 360px;
