--- a/styles/default.less
+++ b/styles/default.less
@@ -9,6 +9,8 @@
 .hue { fill: @hue; stroke: @hue; opacity: .4; stroke-opacity: 0; }
 .white { fill: @white; stroke: @white; }
 
+.hidden { display: none; }
+
 ////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////
