--- a/styles/main.less
+++ b/styles/main.less
@@ -1,4 +1,9 @@
-@import url('fonts.less');
+@import url('fonts.css');
+
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
 
 @black: #000000;
 @color: #333333; // default value
@@ -16,6 +21,41 @@
 ////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////
 
+.font-family-bold { font-family: 'BrixSans'; font-weight: bold; font-style: normal; }
+.font-family-normal { font-family: 'BrixSlab'; font-weight: normal; font-style: normal; }
+
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+
+.font-size(@sizeValue) {
+  @remValue: @sizeValue;
+  @pxValue: (@sizeValue * 10);
+  font-size: ~"@{pxValue}px";
+  font-size: ~"@{remValue}rem";
+}
+
+.line-height(@heightValue) {
+  @remValue: @heightValue;
+  @pxValue: (@heightValue * 10);
+  line-height: ~"@{pxValue}px";
+  line-height: ~"@{remValue}rem";
+}
+
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+
+* {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke: 1px transparent;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.01);
+}
+
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////
+
 ////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////
 // BEGIN OF: HTML
@@ -25,8 +65,8 @@ html {
   font-size: 62.5%; /* Sets up the Base 10 stuff */
   height: 100%;
 
-  ////////////////////////////////////////////////////////////////
-  ////////////////////////////////////////////////////////////////
+  //////////////////////////////////////////////////////////////
+  //////////////////////////////////////////////////////////////
   // BEGIN OF: body
 
   body.object-0101-0110 .info { bottom: 0; right: 0; }
@@ -70,8 +110,9 @@ html {
   body.object-1221-1231 .info { top: 0; left: 0; }
 
   body {
-    .font-family-base; .normal;
-    .font-size(1.6);
+    .font-family-normal;
+    .font-size(1.9);
+    .line-height(3.6);
     background-color: @white;
     color: @black;
     height: 100%;
@@ -80,13 +121,11 @@ html {
 
     .info {
       border: 1px solid;
-      font-size: 68%;
-      height: 180px - 30 - 30;
-      line-height: 2em;
+      height: 270px - 30 - 30;
       margin: 90px;
       padding: 30px;
       position: absolute;
-      width: 180px - 30 - 30;
+      width: 270px - 30 - 30;
     }
 
     #svgObject svg {
@@ -138,8 +177,8 @@ html {
     .error { margin: 113px; }
   }
 
-	////////////////////////////////////////////////////////////////
-	////////////////////////////////////////////////////////////////
+	////////////////////////////////////////////////////////////
+	////////////////////////////////////////////////////////////
 	// END OF: body
 
 }
