--- a/styles/main.less
+++ b/styles/main.less
@@ -121,17 +121,26 @@ html {
 
     .info {
       border: 1px solid;
-      height: 270px - 30 - 30;
+      height: 270px;
       margin: 90px;
       padding: 30px;
       position: absolute;
-      width: 270px - 30 - 30;
+      width: 270px;
     }
 
     #svgObject svg {
       height: 360px;
       position: absolute;
       width: 360px;
+    }
+
+    #svgBase64 {
+
+      .modal-body {
+        font-family: monospace;
+        line-height: 1.8em;
+        word-break: break-all;
+      }
     }
 
     #object-0101-0110 { top: 0; left: 0; }
@@ -170,16 +179,16 @@ html {
     #object-1121-1130 { bottom: 0; left: 0; }
     #object-1201-1210 { bottom: 0; left: 0; }
     #object-1211-1220 { bottom: 0; left: 0; }
-        
+
     #object-0401-0410 { bottom: 0; right: 0; }
     #object-1221-1231 { bottom: 0; right: 0; }
 
     .error { margin: 113px; }
   }
 
-	////////////////////////////////////////////////////////////
-	////////////////////////////////////////////////////////////
-	// END OF: body
+  ////////////////////////////////////////////////////////////
+  ////////////////////////////////////////////////////////////
+  // END OF: body
 
 }
 
