--- a/styles/main.less
+++ b/styles/main.less
@@ -1,10 +1,3 @@
-@import url('fonts.css');
-
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-
 @black: #000000;
 @color: #333333; // default value
 @hue: #666666; // default value
@@ -14,60 +7,15 @@
 .hue { fill: @hue; stroke: @hue; opacity: .4; stroke-opacity: 0; }
 .white { fill: @white; stroke: @white; }
 
-.hidden { display: none; }
-
 ////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////
-
-.font-family-bold { font-family: 'BrixSans'; font-weight: bold; font-style: normal; }
-.font-family-normal { font-family: 'BrixSlab'; font-weight: normal; font-style: normal; }
-
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-
-.font-size(@sizeValue) {
-  @remValue: @sizeValue;
-  @pxValue: (@sizeValue * 10);
-  font-size: ~"@{pxValue}px";
-  font-size: ~"@{remValue}rem";
-}
-
-.line-height(@heightValue) {
-  @remValue: @heightValue;
-  @pxValue: (@heightValue * 10);
-  line-height: ~"@{pxValue}px";
-  line-height: ~"@{remValue}rem";
-}
-
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-
-* {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke: 1px transparent;
-  text-shadow: 0 1px 0 rgba(0,0,0,0.01);
-}
-
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-// BEGIN OF: HTML
 
 html {
   background-color: @white;
   font-size: 62.5%; /* Sets up the Base 10 stuff */
   height: 100%;
-
-  //////////////////////////////////////////////////////////////
-  //////////////////////////////////////////////////////////////
-  // BEGIN OF: body
 
   body.object-0101-0110 .info { bottom: 0; right: 0; }
   body.object-0921-0930 .info { bottom: 0; right: 0; }
@@ -110,11 +58,10 @@ html {
   body.object-1221-1231 .info { top: 0; left: 0; }
 
   body {
-    .font-family-normal;
-    .font-size(1.9);
-    .line-height(3.6);
     background-color: @white;
     color: @black;
+    font-size: 16px;
+    line-height: 1.8em;
     height: 100%;
     position: relative;
     overflow: auto;
@@ -133,14 +80,15 @@ html {
         .modal-body {
           color: @black;
 
-
           .color-info {
-            font-size: 1em;
-            line-height: 1.4em;
+            font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+            font-size: 0.9em;
+            line-height: 1.5em;
           }
 
           .base-64 {
-            line-height: 0;
+            font-family: Menlo, monospace;
+            line-height: 1em;
             word-break: break-all;
           }
         }
@@ -189,16 +137,7 @@ html {
 
     .error { margin: 113px; }
   }
-
-  ////////////////////////////////////////////////////////////
-  ////////////////////////////////////////////////////////////
-  // END OF: body
-
 }
-
-////////////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////////////
-// END OF: html
 
 ////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////
